--- a/front_office/index.css
+++ b/front_office/index.css
@@ -1,7 +1,24 @@
-#app {
-    background-color: lightblue;
+* {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    margin: 0;
 }
 
-#navbar {
+#app {
+    background-color: #31708E;
+}
+
+.navbar {
     list-style: none;
 }
+
+.nav-item {
+    color: white;
+    padding: 0.5em;
+}
+
+.nav-item:hover {
+    color: white;
+    font-style: none;
+}
+
