--- a/back_office/reserved.css
+++ b/back_office/reserved.css
@@ -1,14 +1,41 @@
-body{
+* {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    margin: 0;
+}
+
+#app {
+    background-color: #41B3A3;
+}
+
+.navbar {
+    list-style: none;
+}
+
+.nav-item {
+    color: white;
+    padding: 0.5em;
+}
+
+.nav-item:hover {
+    color: white;
+    font-style: none;
+}
+
+/* ------------------------- */
+
+
+/*body{
     margin  : 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 
-}
+}*/
 
 .loginbox{
     width: 320px;
     height: 420px;
-    background: rgb(173, 193, 247);
+    background: #C38D9E;
     color: #000;
     top: 50%;
     left: 50%;
