css e modale login

--- a/front_office/index.css
+++ b/front_office/index.css
@@ -24,7 +24,7 @@
 
 /************************************************************************/
 /* MODAL FOR LOGIN */
-.modal {
+.modal-content {
     background: #C38D9E;
     color: #000;
     border-radius: 5%;
