--- a/front_office/index.css
+++ b/front_office/index.css
@@ -1,4 +1,4 @@
-* {
+*, .btn {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     margin: 0;
@@ -27,6 +27,28 @@
 .modal-content {
     background: #C38D9E;
     color: #000;
+    width: 20em;
+    margin: 20%;
     border-radius: 5%;
+    border-width: 0;
 }
 
+.avatar {
+    width: 5em;
+    height: 5em ;
+    border-radius: 50%;
+    position: absolute;
+    top: -17%;
+    left: calc(50% - 2.5em);
+}
+
+.btn {
+    padding: 0em 2em;
+    border: none;
+    outline: none;
+    height: 2em;
+    background: #ffff;
+    color: #000;
+    font-size: 18px;
+    border-radius: 1em;
+}
