--- a/back_office/reserved.css
+++ b/back_office/reserved.css
@@ -22,15 +22,7 @@
 }
 
 /* ------------------------- */
-
-
-/*body{
-    margin  : 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-
-}*/
-
+/*
 .loginbox{
     width: 320px;
     height: 420px;
@@ -44,24 +36,8 @@
     padding: 70px 30px;
     border-radius: 5%;
 }
-
-
-.avatar{
-    width: 100px;
-    height:100px ;
-    border-radius: 50%;
-    position: absolute;
-    top: -50px;
-    left: calc(50% - 50px);
-}
-
-h1{
-    margin: 0;
-    padding:0 0 20px ;
-    text-align: center;
-    font-size: 22px;
-}
-
+*/
+/*
 .loginbox p{
     margin: 0;
     padding: 0;
@@ -98,11 +74,53 @@ h1{
     background-color: #ffc107;
     color: #000;
 }
+  }}*/
+  .modal-content {
+    background: #C38D9E;
+    color: #000;
+    width: 22em;
+    margin: 10%;
+    position: absolute;
+    border-radius: 5%;
+}
+
+.avatar {
+    width: 5em;
+    height: 5em ;
+    border-radius: 50%;
+    position: absolute;
+    top: -17%;
+    left: calc(50% - 2.5em);
+}
+h4{
+  align-items: center;
+}
+.btn {
+    padding: 0em 2em;
+    border: none;
+    outline: none;
+    height: 2em;
+    background: #ffff;
+    color: #000;
+    font-size: 18px;
+    border-radius: 1em;
+}
+
+.form-control {
+    border: none;
+    border-radius: 0;
+    border-bottom: 1px solid #000;
+    background: transparent;
+    outline: none;
+    height: 40px;
+    color: #000;
+    font-size: 16px;
+}
 
 .switch {
     position:relative;
     left: 72px;
-    bottom: 22px;
+    bottom: 36px;
     display: inline-block;
     width: 40px;
     height: 20px;
@@ -157,5 +175,5 @@ h1{
   }
 
   .slider.round:before {
-    border-radius: 50%;
-  }
+    border-radius: 50%;}
+
