--- a/back_office/reserved.css
+++ b/back_office/reserved.css
@@ -5,7 +5,7 @@
 }
 
 #app {
-    background-color: #41B3A3;
+    background-color: #4D6D9A;
 }
 
 .navbar {
@@ -76,7 +76,7 @@
 }
   }}*/
   .modal-content {
-    background: #C38D9E;
+    background: #EDB5BF;
     color: #000;
     width: 22em;
     margin: 10%;
@@ -156,11 +156,11 @@ h4{
   }
 
   input:checked + .slider {
-    background-color: #2196F3;
+    background-color: #4D6D9A;
   }
 
   input:focus + .slider {
-    box-shadow: 0 0 2px #2196F3;
+    box-shadow: 0 0 2px #4D6D9A;
   }
 
   input:checked + .slider:before {
