--- a/front_office/index.css
+++ b/front_office/index.css
@@ -5,7 +5,7 @@
 }
 
 #app {
-    background-color: #41B3A3;
+    background-color: #4D6D9A;
 }
 
 .navbar {
@@ -27,7 +27,7 @@
 .boat-images {
     /*background-color: lightgrey;*/
     float: left;
-    border: 1px solid lightgrey;
+    border: 1px solid #86B3D1;
     /*border-radius: 1rem;*/
     margin: 4% 0 0 4%;
     /*padding: 1rem;*/
@@ -37,7 +37,7 @@
 }
 
 .boat-images h5 {
-    color: black;
+    color: #5F6366;
     padding-left: 1rem;
 }
 
@@ -53,14 +53,32 @@
     /*border-radius: 0.2rem;*/
 }
 
-.price {
+.price  {
     visibility: hidden;
 }
+
+
+@media screen and (max-width: 800px) {
+
+    .boat-images {
+        /*background-color: lightgrey;*/
+        float: left;
+        border: 1px solid #86B3D1;
+        /*border-radius: 1rem;*/
+        margin: 4% 0 0 4%;
+        /*padding: 1rem;*/
+        width: 40%;
+        overflow: auto;
+        height: 55vh;
+    }
+}
+
+
 
 /************************************************************************/
 /* MODAL FOR LOGIN */
 .modal-content {
-    background: #C38D9E;
+    background: #EDB5BF;
     color: #000;
     width: 20em;
     margin: 20%;
