--- a/back_office/reserved.css
+++ b/back_office/reserved.css
@@ -21,66 +21,11 @@
     font-style: none;
 }
 
-/* ------------------------- */
-/*
-.loginbox{
-    width: 320px;
-    height: 420px;
-    background: #C38D9E;
-    color: #000;
-    top: 50%;
-    left: 50%;
-    position: absolute;
-    transform: translate(-50%,-50%);
-    box-sizing: border-box;
-    padding: 70px 30px;
-    border-radius: 5%;
-}
-*/
-/*
-.loginbox p{
-    margin: 0;
-    padding: 0;
-    font-weight: bold;
-}
-
-.loginbox input{
-    width: 100%;
-    margin-bottom: 20px;
-}
-
-.loginbox input[type="text"], input[type="password"]{
-    border: none;
-    border-bottom: 1px solid #000;
-    background: transparent;
-    outline: none;
-    height: 40px;
-    color: #000;
-    font-size: 16px;
-}
-
-.loginbox input[type="submit"]{
-    border: none;
-    outline: none;
-    height: 40px;
-    background: #ffff;
-    color: #000;
-    font-size: 18px;
-    border-radius: 20px;
-}
-
-.loginbox input[type="submit"]:hover{
-    cursor: pointer;
-    background-color: #ffc107;
-    color: #000;
-}
-  }}*/
   .modal-content {
     background: #C38D9E;
     color: #000;
-    width: 22em;
-    margin: 10%;
-    position: absolute;
+    width: 20em;
+    margin: 20%;
     border-radius: 5%;
 }
 
@@ -92,9 +37,7 @@
     top: -17%;
     left: calc(50% - 2.5em);
 }
-h4{
-  align-items: center;
-}
+
 .btn {
     padding: 0em 2em;
     border: none;
@@ -177,3 +120,18 @@ h4{
   .slider.round:before {
     border-radius: 50%;}
 
+*{
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  text-decoration: none;
+
+}
+.sidebar{
+  position: fixed;
+  left: 0;
+  width: 250px;
+  height: 100%;
+  
+
+}
