--- a/back_office/reserved.css
+++ b/back_office/reserved.css
@@ -129,9 +129,83 @@
 }
 .sidebar{
   position: fixed;
-  left: 0;
+  left: -250px;
   width: 250px;
   height: 100%;
-  
+  background: #99CED3;
+  transition: all .5s ease;
+}
+
+.sidebar header{
+  font-size: 22px;
+  color: black;
+  text-align: center;
+  line-height: 70px;
+  background: #86B3D1 ;
+  user-select: none;
+}
+
+.sidebar ul a{
+  display: block;
+  height: 100%;
+  width: 100%;
+  line-height: 65px;
+  font-size: 20px;
+  color: black;
+  padding-left: 40px;
+  box-sizing: border-box;
+  border-top: 1px solid #4D6D9A;
+  border-bottom: 1px solid rgb(139, 124, 207);
+  transition: 4s;
+}
+
+ul li :hover a{
+  padding-left: 50px;
+}
+
+.sidebar ul a i{
+  margin-right: 16px;
+}
+
+#check{
+  display: none;
+}
+
+label #btn,label #cancel{
+  position: absolute;
+  cursor: pointer;
+  border-radius: 3px;
+}
+label #btn{
+  left: 40px;
+  top: 25px;
+  font-size: 35px;
+  color: #99CED3;
+  transition: all .5s;
+ /* padding-bottom: 10px;  non riesco a metterla più su*/
+}
+
+label #cancel{
+  z-index: 1111;
+  left: -195px;
+  top: 17px;
+  font-size: 30px;
+  color: #99CED3;
+  padding: 4px 9px;
+  transition: all .5s ease;
+}
+
+#check:checked ~ .sidebar{
+  left: 0;
+}
+
+#check:checked ~ label #btn{
+  left: 250px;
+  opacity: 0;
+  pointer-events: none;
+}
+
+#check:checked ~ label #cancel{
+  left: 195px;
 
 }
