--- a/front_office/index.css
+++ b/front_office/index.css
@@ -33,12 +33,27 @@
     /*padding: 1rem;*/
     width: 20%;
     overflow: auto;
-    height: 55vh;
+    height: 65vh;
 }
 
-.boat-images h5 {
+.data, .title{
+    font-family: "Dejavu Sans", Tahoma, Geneva, Verdana, sans-serif;
     color: #5F6366;
     padding-left: 1rem;
+}
+
+.data {
+    font-weight: normal;
+}
+
+/*.details {
+    border-top: 1px solid #86B3D1;
+}*/
+
+.d-flex {
+    list-style: none;
+    display: flex;
+    border-top: 1px solid #86B3D1;
 }
 
 /*.boat-images {
@@ -53,8 +68,31 @@
     /*border-radius: 0.2rem;*/
 }
 
-.price  {
+.price_data  {
     visibility: hidden;
+}
+
+#calcBtn {
+    float: right;
+    position: fixed;
+    bottom: 1rem;
+    right: 5rem;
+    margin-bottom: 2rem;
+    background-color: #4D6D9A;
+    box-shadow: 0px 0px 11px white;
+    color: white;
+    outline: none;
+    border: none;
+    border-radius: 3rem;
+    width: 5rem;
+    height: 5rem;
+}
+
+#calcModal {
+    position: fixed;
+    bottom: 1rem;
+    right: 5rem;
+    /*margin: 2rem;*/
 }
 
 
@@ -68,8 +106,8 @@
         margin: 4% 0 0 4%;
         /*padding: 1rem;*/
         width: 40%;
-        overflow: auto;
-        height: 55vh;
+        overflow: auto; 
+        height: 70vh;
     }
 }
 
@@ -77,6 +115,7 @@
 
 /************************************************************************/
 /* MODAL FOR LOGIN */
+
 .modal-content {
     background: #EDB5BF;
     color: #000;
