--- a/back_office/reserved.css
+++ b/back_office/reserved.css
@@ -6,6 +6,7 @@
 
 #app {
     background-color: #4D6D9A;
+    position: sticky;
 }
 
 .navbar {
@@ -167,5 +168,15 @@ ul li :hover a{
 
 .sidebar ul a i{
   margin-right: 16px;
+}
+#inner{
+  width: 50%;
+  height: 50%;
+  top: 25%;
+  margin: 0 auto;
+  position: relative;
+  right: -120px;
+  left: 420px;
+  top: 420px;
 }
 
