--- a/back_office/reserved.css
+++ b/back_office/reserved.css
@@ -172,14 +172,12 @@ ul li :hover a{
   margin-right: 16px;
 }
 #inner{
-  width: 50%;
-  height: 50%;
-  top: 25%;
-  margin: 0 auto;
   position: relative;
-  right: -120px;
-  left: 420px;
-  top: 180px;
-  
+  top:10vh;
+  left: 16vw;
+  width: 80vw;
+  height: 85vh;
+  margin: 3vh;
+  /*background-color:#EDB5BF;*/
 }
 
