--- a/public/css/reserved.css
+++ b/public/css/reserved.css
@@ -183,6 +183,18 @@ ul li :hover a{
   /*background-color:#EDB5BF;*/
 }
 
+#ptable2{
+  position: relative;
+  top:10vh;
+  left: 16vw;
+  width: 80vw;
+  height: 85vh;
+  margin: 3vh;
+
+  /*background-color:#EDB5BF;*/
+}
+
+
 
 #btn-upd{
   background-color: rgb(52, 189, 93);
@@ -190,6 +202,7 @@ ul li :hover a{
   float: right;
   border-radius: 25px;
   padding: 6px 10px;
+  right: 5px;
 }
 
 #btn-del{
@@ -199,6 +212,7 @@ ul li :hover a{
   border-radius: 25px;
   padding: 6px 12px;
   margin-left: 5px;
+  right: 5px;
 }
 /*
 #btn-pass{
