--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,15 +1,31 @@
 *, .btn {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
+
+    font-size: 15px;
+
     margin: 0;
+}
+
+button:focus{
+    outline:none !important;
 }
 
 #app {
     background-color: #4D6D9A;
+
+    overflow: hidden;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
 }
 
 .navbar {
     list-style: none;
+}
+
+.navbar-toggler {
+    color: white;
 }
 
 .nav-item {
@@ -23,13 +39,24 @@
 }
 
 /***********************************************************/
+#main_page {
+    margin-top: 4em;
+}
+
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 /**** gestisce i div con le immagini e i dati degli yacht *****/
 .boat-images {
     /*background-color: lightgrey;*/
     float: left;
     border: 1px solid #86B3D1;
     /*border-radius: 1rem;*/
-    margin: 4% 0 0 4%; /*(up-right-down-left)*/
+    margin: 4% 2% 0 2%; /*(up-right-down-left)*/
     /*padding: 1rem;*/
     width: 20%;
     overflow: auto;
@@ -64,15 +91,16 @@
 }
 
 .price_data  {
-    visibility: hidden;
+    /*visibility: hidden;*/
+    display: none;
 }
 
 #calcBtn {
     float: right;
     position: fixed;
-    bottom: 1rem;
-    right: 5rem;
-    margin-bottom: 2rem;
+    bottom: 10vh;
+    left: 90vw;;
+    /*margin-bottom: 2rem;*/
     background-color: #4D6D9A;
     box-shadow: 0px 0px 11px white;
     color: white;
@@ -84,6 +112,7 @@
 }
 
 #calcModal {
+    width: fit-content;
     position: fixed;
     bottom: 1rem;
     right: 5rem;
@@ -92,14 +121,20 @@
 
 /************************************** */
 /*** piccoli schermi*/
-@media screen and (max-width: 800px) {
+
+@media screen and (max-width: 900px) {
+
+    * {
+        font-size: 20px;
+    }
 
     .boat-images {
-        /*background-color: lightgrey;*/
+        background-color: red;
         float: left;
         border: 1px solid #86B3D1;
         /*border-radius: 1rem;*/
-        margin: 4% 0 0 4%;
+        /*margin: 4% 0 0 4%;*/
+        align-self: center;
         /*padding: 1rem;*/
         width: 40%;
         overflow: auto; 
@@ -113,11 +148,12 @@
 @media screen and (max-width: 600px) {
 
     .boat-images {
-        /*background-color: lightgrey;*/
+        background-color: green;
         float: left;
         border: 1px solid #86B3D1;
         /*border-radius: 1rem;*/
         /*margin: 4% 0 0 4%;*/
+        align-self: center;
         /*padding: 1rem;*/
         width: 90%;
         overflow: auto; 
