--- a/public/css/index.css
+++ b/public/css/index.css
@@ -50,6 +50,11 @@ button:focus{
     justify-content: center;
 }
 
+.noleggioBtn {
+    border: none;
+    background-color: lightgray;
+}
+
 /**** gestisce i div con le immagini e i dati degli yacht *****/
 .boat-images {
     /*background-color: lightgrey;*/
@@ -171,13 +176,13 @@ button:focus{
 
 
 /************************************************************************/
-/* MODAL FOR LOGIN */
+/* MODALS */
 
 .modal-content {
     background: #EDB5BF;
     color: #000;
     width: 20em;
-    margin: 20%;
+    margin: 20vw;
     border-radius: 5%;
 }
 
