--- a/public/css/reserved.css
+++ b/public/css/reserved.css
@@ -194,22 +194,22 @@ ul li :hover a{
 
 
 #btn-upd{
-  background-color: rgb(52, 189, 93);
+
+  background-color: rgb(133, 202, 154);
   border: #000;
-  float: right;
   border-radius: 25px;
   padding: 6px 10px;
-  right: 5px;
+  right: 15px;
 }
 
 #btn-del{
   background-color: #eb5248;
   border: #000;
-  float: right;
   border-radius: 25px;
   padding: 6px 12px;
   margin-left: 5px;
   right: 5px;
+
 }
 /*
 #btn-pass{
@@ -222,7 +222,7 @@ ul li :hover a{
 } 
 */#styled-tab{
   position: relative;
-  top: 10px;
+  top: 12px;
   left: 3.5%;
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
@@ -234,9 +234,10 @@ ul li :hover a{
     padding: 8px;
     height: 50px;
     vertical-align: center;
+    width: 20%;
+    text-align: center;
   }
   #styled-tab th {
-    
     border: 1px solid #ddd;
     padding: 8px;
     table-layout: auto;
@@ -244,12 +245,15 @@ ul li :hover a{
   }
   
 #styled-tab tr:nth-child(even){
-    background-color: #f2f2f2;}
-  
+    background-color: #f2f2f2;
+    
+  }
+
 #styled-tab tr:hover {
     background-color: rgb(213, 236, 247);}
   
 #styled-tab th {
+    width: 10%;
     text-align: center;
     background-color: #86B3D1;
     color: black;
