--- a/public/css/index.css
+++ b/public/css/index.css
@@ -54,6 +54,10 @@ button:focus{
     flex-wrap: wrap;
 }
 
+#logModContainer {
+    justify-content: center;
+}
+
 .noleggioBtn {
     border: none;
     background-color: lightgray;
@@ -138,6 +142,11 @@ button:focus{
     bottom: 1rem;
     right: 5rem;
     /*margin: 2rem;*/
+}
+
+#loginModal {
+    justify-content: center;
+    padding-top: 10vh;
 }
 
 /************************************** */
@@ -238,8 +247,8 @@ button:focus{
 .modal-content {
     background: #EDB5BF;
     color: #000;
-    width: 20em;
-    margin: 20vw;
+    /*width: 20em;*/
+    /*margin: 20vw;*/
     border-radius: 5%;
 }
 
