--- a/public/css/reserved.css
+++ b/public/css/reserved.css
@@ -220,6 +220,15 @@ ul li :hover a{
   right: 80%;
   width: 12%;
 }
+.btn-note{
+  background-color: #c7d6ff;
+  border: #000;
+  border-radius: 25px;
+  padding: 6px 12px;
+  margin-left: 5px;
+  right: 5px;
+
+}
 
 
 /*
@@ -365,3 +374,5 @@ form.example input[type=text] {
   right: 5px;
   float:right;
 }
+
+
