--- a/public/css/reserved.css
+++ b/public/css/reserved.css
@@ -349,15 +349,21 @@ form.example input[type=text] {
 .card-new{
   margin-right: 0px;
   border-color: #4D6D9A;
-  background-color: #e7f0ff;
-  border: 3px solid;
-  border-radius: 25px;
+  background-color:rgb(0 161 255 / 13%);
+  border-radius: 10px;
+  box-shadow: 0 5px 15px 0 rgb(0 0 0 / 20%), 0 5px 15px 0 rgb(0 0 0 / 20%);
   width: 50%;
   position: relative;
   left: 20%;
 }
 .card-title-new{
   color: #c72a1f;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 130%;
+}
+.card-text-new{
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 110%;
 }
 .card{
   margin-top: 15px;
@@ -384,11 +390,40 @@ form.example input[type=text] {
   right: 5px;
   float:right;
 }
+.btn-mod2{
+  position: relative;
+  background-color: #5bce7d;
+  border: #000;
+  border-radius: 25px;
+  padding: 8px 22px;
+  float:right;
+
+}
+.btn-d2{
+  position: relative;
+  left: 50%;
+  background-color: #eb5248;
+  border: #000;
+  border-radius: 25px;
+  padding: 8px 22px;
+  margin-left: 5px;
+
+}
+.btn-d2{
+  position: relative;
+  left: 55%;
+  background-color: #eb5248;
+  border: #000;
+  border-radius: 25px;
+  padding: 8px 22px;
+  margin-left: 5px;
+
+}
 .btn-back{
   background-color: #7495c4;
   border: #000;
   border-radius: 25px;
-  padding: 6px 20px;
+  padding: 8px 22px;
   float:right;
 
 }
@@ -418,4 +453,75 @@ form.example input[type=text] {
 }
 .dropdown:hover>.dropdown-menu{
   display: block;
+}
+
+
+.wrapper{
+  position: absolute;
+  top: 30%;
+  left: 40%;
+  transform: translate(-50%,-50%);
+}
+
+.container{
+  width: 180%;
+  height: 60%;
+  background: rgb(0 161 255 / 13%);
+  position: relative;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px 0 rgb(0 0 0 / 20%), 0 5px 15px 0 rgb(0 0 0 / 20%);
+}
+
+.container .profile-img{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  position: absolute;
+  top: -20%;
+  left: 42%;
+  border: 5px solid #82b4d3;
+}
+
+.content{
+  padding: 65px 20px 20px;
+}
+
+.content .sub-content{
+  text-align: center;
+}
+
+.content .sub-content h1{
+  text-transform: uppercase;
+  font-size: 200%;
+  color: #1a6391;
+}
+
+.content .sub-content span{
+  font-size: 120%;
+  color: #0d2948;
+}
+
+.content .sub-content p{
+  margin-top: 15px;
+  font-weight: 600;
+}
+
+.content .sub-content span.location{
+  display: block;
+  margin: 5px 0 20px;
+}
+
+.content .sub-content span.location .fa{
+  font-size: 18px;
+  margin-right: 5px;
+}
+
+.content .sub-content a{
+  color: #1da1f2;
+}
+
+.data{
+  width: 100%;
+  overflow: hidden;
+  margin: 30px 0 20px;
 }
