--- a/manager-react/src/App.css
+++ b/manager-react/src/App.css
@@ -38,13 +38,15 @@
 }
 
 
-/* ----------------SIDEBAR PROVA----------------------------*/
+/* ----------------SIDEBAR----------------------------*/
 #header {
   position: fixed;
   width: 220px;
+  z-index: 1;
 }
 #header .pro-sidebar {
   height: 100vh;
+  z-index: 1;
 }
 #header .closemenu {
   color: white;
@@ -118,6 +120,7 @@
 
 #clienti {
   margin-left: 90px
+
 }
 
 #clienti h1{
@@ -150,3 +153,14 @@
 #noleggi h1{
   text-align: center;
 }
+
+
+/*-------------------LINECHART---------------------*/
+#chartDiv{
+  position: fixed;
+  z-index: -1;
+}  
+
+
+
+
