--- a/public/css/reserved.css
+++ b/public/css/reserved.css
@@ -367,8 +367,8 @@ form.example input[type=text] {
 
 .card{
   margin-top: 15px;
-  border-color: #4D6D9A;
-  border: 2px solid;
+  border-color: #93b0d8;
+  border: 1px solid;
 }
 .card-title{
   color: #eb5248;
