prova modifica prodotto

--- a/public/css/reserved.css
+++ b/public/css/reserved.css
@@ -603,6 +603,10 @@ form.example input[type=text] {
   background-color: #0666a3;
   }
 
+  .post-form{
+    background-color: #5bce7d;
+  }
+
 
 
 
