--- a/public/css/reserved.css
+++ b/public/css/reserved.css
@@ -217,12 +217,27 @@ ul li :hover a{
   width: 12%;
 }
 .btn-note{
-  background-color: #c7d6ff;
-  border: #000;
-  border-radius: 25px;
-  padding: 6px 12px;
   margin-left: 5px;
-  right: 5px;
+  background-color: #095484;
+  color: #fff;
+  border: #000;
+  border-radius: 5px;
+  padding: 4px 18px;
+  float:right;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin-bottom: 0.8rem;
+}
+.btn-a{
+  width: 14.5em;
+  margin-left: 5px;
+  background-color: #095484;
+  color: #fff;
+  border: #000;
+  border-radius: 5px;
+  padding: 4px 18px;
+  float:right;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin-bottom: 0.8rem;
 
 }
 
@@ -603,9 +618,6 @@ form.example input[type=text] {
   background-color: #0666a3;
   }
 
-  .post-form{
-    background-color: #5bce7d;
-  }
 
 
 
