--- a/public/css/reserved.css
+++ b/public/css/reserved.css
@@ -131,7 +131,7 @@ button:focus{
 .sidebar{
   position: fixed;
   bottom: 2px;
-  width: 230px;
+  width: 16em;
   height: 100%;
   background: #99CED3;
 
