--- a/manager-react/src/App.css
+++ b/manager-react/src/App.css
@@ -167,6 +167,7 @@
 }
 
 #arcobaleno{
+  text-align: center;
   background-image: linear-gradient(to left, violet, indigo, blue);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -299,4 +300,8 @@
 /**/
 #newRegC {
   visibility: hidden;
+}
+
+#titoliCentro{
+  text-align: center;
 }
